2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/xml/gda-xml-provider.c: killed warnings.
	(process_sql_commands): added missing implementation.

2003-09-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/*.sgml:
	* libgda/gda-parameter.c:
	* libgda/gda-quark-list.c: added more inline documentation.

2003-08-26  Philippe CHARLIER <p.charlier@chello.be>

	* libgda/gda-value.c (gda_value_new_from_xml): the type is stored in
	the "gdatype" property, not "type".

	* libgda/gda-data-model.c (add_xml_row): fixed typo in call to strcmp().

2003-08-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-xml-database.c (gda_xml_database_new_table_from_node):
	return NULL if we cannot create the table, not if we can.

2003-08-24  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-client.c:
	* libgda/gda-value.c:
	* providers/postgres/gda-postgres-provider.c:
	* testing/client.c:
	* testing/postgres-test.c: fixed leaks. Now gda-test doesn't leak when
	testing mysql, postgrest and default providers.

2003-08-24  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* doc/C/libgda-docs.sgml:
	* doc/C/tmpl/gda-blob.sgml:
	* libgda/gda-connection.c:
	* libgda/gda-blob.h: added documentation for GdaBlob.

	* libgda/gda-server-provider.c:
	* libgda/gda-data-model.c: make them abstract.

	* testing/postgres-test.c: fixed double free.

2003-08-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.[ch] (gda_data_model_add_data_from_xml_node):
	new function.
	(gda_data_model_to_xml_node): use "value" instead of "field" as the
	name for the nodes representing the fields' values, to work the same
	as gda_value_new_from_xml(). Also, add the "gdatype" property.

	* libgda/gda-xml-database.c (gda_xml_database_new_table_from_node):
	implemented missing code.

2003-08-22  Philippe CHARLIER <p.charlier@chello.be>

	* libgda/gda-xml-database.[ch] (gda_xml_database_set_version): removed
	(gda_xml_database_get_user_version, gda_xml_databaase_set_user_version):